# sticcs

./: README.md  pyproject.toml
sticcs/: dac.py  sticcs.py
